--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -2,15 +2,16 @@
   -webkit-font-smoothing: antialiased;
 }
 ::selection {
-  background: #FFF7C7; /* WebKit/Blink Browsers */
+  background: #ff9900; /* WebKit/Blink Browsers */
 }
 ::-moz-selection {
-  background: #FFF7C7; /* Gecko Browsers */
+  background: #FF9900; /* Gecko Browsers */
 }
 
 /*
  * Globals
  */
+/*
 body {
   padding: 20px;
   color: #72767b;
@@ -35,11 +36,11 @@ h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
 }
 h1 {
-  font-family: ‘Lora’, Serif; 
-  font-size: 42px; 
-  font-weight: normal; 
-  color: #484D52; 
-  line-height: 52px; 
+  font-family: ‘Lora’, Serif;
+  font-size: 42px;
+  font-weight: normal;
+  color: #484D52;
+  line-height: 52px;
   letter-spacing : 1.14;
   margin-bottom: 1rem;
 }
@@ -74,3 +75,4 @@ em {
 img {
   max-width: 100%;
 }
+*/
