--- a/views/frontpage.pug
+++ b/views/frontpage.pug
@@ -1,35 +1,44 @@
 extends ./layout.pug
 
+include ./mixins/bodytext.pug
+
 block prepend body
-  body.homepage
-    
+  body
+
     include ./partials/header.pug
-    
+
     -// Homepage Banner Section
-    section.homepage-banner(style='background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(' + pageContent.getImage("homepage.backgroundImage").url + ')')
-      .banner-content.container
-        h2.banner-title !{pageContent.getText("homepage.title")}
-        p.banner-description !{pageContent.getText("homepage.tagline")}
-        if ( pageContent.getLink("homepage.buttonLink") && pageContent.getText("homepage.buttonText") )
-          a.banner-button(href=pageContent.getLink("homepage.buttonLink").url(ctx.linkResolver)) !{pageContent.getText("homepage.buttonText")}
-    
+    section.frontpage-banner(style='background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(' + doc.getImage("frontpage.hero-image").url + ')')
+      .container
+        h2 !{doc.getText("frontpage.heading")}
+        p !{doc.getText("frontpage.tagline")}
+
     -// Content Section
     div.container
-    
-      -// If there are any slices
-      if pageContent.getSliceZone('homepage.body') !== null
-        
-        -// Display the slices    
-        for slice in pageContent.getSliceZone('homepage.body').slices
-          case slice.sliceType
-            when 'heading'
-              include ./partials/heading.pug
-            when 'textSection'
-              include ./partials/text-section.pug
-            when 'fullWidthImage'
-              include ./partials/full-width-image.pug
-            when 'highlight'
-              include ./partials/highlight.pug
-            when 'gallery'
-              include ./partials/gallery.pug
 
+      -// About
+      != doc.getStructuredText("frontpage.about-heading").asHtml(ctx.linkResolver)
+      +bodyTextH2(doc.getStructuredText('frontpage.about-body'))
+
+      -// Projects
+      != doc.getStructuredText("frontpage.projects-heading").asHtml(ctx.linkResolver)
+      ul
+      each project in doc.getGroup("frontpage.projects").toArray()
+        a(href=project.getLink('project-link').url(ctx.linkResolver))
+          li.project-bg(style='background-image: url('+project.getImage("project-image").url+')')
+            h3
+              != project.getStructuredText("project-title").asHtml(ctx.linkResolver)
+            p
+              != project.getStructuredText("project-description").asHtml(ctx.linkResolver)
+
+      -// Testimonies
+      != doc.getStructuredText("frontpage.testimonies-heading").asHtml(ctx.linkResolver)
+      each testimony in doc.getGroup('frontpage.testimonies-group').toArray()
+        li
+          div
+            != testimony.getStructuredText("testimony-body").asHtml(ctx.linkResolver)
+            != testimony.getStructuredText("testimony-name").asHtml(ctx.linkResolver)
+
+      -// Contact
+      != doc.getStructuredText("frontpage.contact-heading").asHtml(ctx.linkResolver)
+      != doc.getStructuredText("frontpage.contact-body").asHtml(ctx.linkResolver)
