--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,7 +1,4 @@
 footer
   p
-    | Proudly published with  
-    a(href='https://prismic.io', target='_blank') prismic.io
-    br
-    a(href='https://prismic.io', target='_blank')
-      img.footer-logo(src='images/logo-prismic.svg')
+    a(href='https://mandarin.no', target='_blank')
+      img.footer-logo(src='/images/logo-mandarin-gray-light.svg')
